--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 </div>
             </div>
             <div>
-                <div class="sign_up">
+                <div class="assine">
                     <p>Novo por aqui? <a href="#">Assine agora.</a></p>
                 </div>
 
-                <div class="terms">
+                <div class="termos">
                     <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#">Saiba mais</a></p>
                 </div>
             </div>
